@@ -1,3 +1,6 @@
+* 2006-01-28 Jeremy Sanders <jeremy@jeremysanders.net>
+  - Some fixes to work around Windows issues
+
 * 2006-01-18 Jeremy Sanders <jeremy@jeremysanders.net>
   - Get ready for 0.9
 
